# jbok.info

./: .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml  package.json
.github/workflows/: build.yml  build_deploy.yml  deploy-ec2.yml  deploy.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  router.rs
backend/src/api/: handler.rs  mod.rs
frontend/: Dockerfile
frontend/react/: .dockerignore  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/react/src/: App.tsx
frontend/react/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/react/src/lib/: axios.ts
frontend/react/src/routes/: Root.tsx
frontend/wasm/: .dockerignore  Cargo.toml
frontend/wasm/src/: lib.rs
nginx/: Dockerfile
nginx/script/: entrypoint.sh
nginx/template/: default.conf.renew.template  default.conf.template  nginx.conf.template
react/: Dockerfile  index.html  package-lock.json  package.json
react/src/: App.tsx
script/: build_image.sh  deploy.sh  renew_cert.sh
