[package]
name = "jbok_info-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
dotenv = "0.15.0"
http = "1.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full", "limit", "timeout"] }
tower-http = { version = "0.6.1", features = ["cors", "full", "trace"] }

[profile.release]
codegen-units = 1
opt-level = 2
lto = "fat"
strip = true
panic = "abort"
